--- a/views/rawmaterial_view.ejs
+++ b/views/rawmaterial_view.ejs
@@ -1,20 +1,32 @@
-<% for(i = 0; i < count; i++) { %>
-    <%= result[i].materialID  %><br>
-    <%= result[i].materialName  %><br>
-    <%= result[i].quantity  %><br>
-    <%= result[i].numberOfProducts  %><br>
-    <%= result[i].productName  %><br>
-    <%= result[i].companyName  %><br>
-    <script>
-    
-            var myDate = new Date(<%= result[i].purchaseDate  %> *1000 );
-            document.write(myDate.toGMTString()+"<br>"+myDate.toLocaleString());
-        </script>
-    <br>
-    <script>
-    
-        var myDate = new Date(<%= result[i].expirayDate  %> *1000 );
-        document.write(myDate.toGMTString()+"<br>"+myDate.toLocaleString());
-    </script>
-    <br>
-    <% } %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+        <% for(i = 0; i < count; i++) { %>
+            <%= result[i].materialID  %><br>
+            <%= result[i].materialName  %><br>
+            <%= result[i].quantity  %><br>
+            <%= result[i].numberOfProducts  %><br>
+            <%= result[i].productName  %><br>
+            <%= result[i].companyName  %><br>
+            <script>
+            
+                    var myDate = new Date(<%= result[i].purchaseDate  %> * 1000 );
+                    document.write(myDate.toGMTString()+"<br>"+myDate.toLocaleString());
+                </script>
+            <br>
+            <script>
+            
+                var myDate = new Date(<%= result[i].expirayDate  %> * 1000 );
+                document.write(myDate.toGMTString()+"<br>"+myDate.toLocaleString());
+            </script>
+            <br>
+            <% } %>
+        
+</body>
+</html>
